force-app/main/default/objects/Apex_Job_Scheduler_Setting__c/Apex_Job_Scheduler_Setting__c.object-meta.xml
<CustomObject>
    <label>Apex Job Scheduler Setting</label>
    <nameField>
        <displayFormat>AJS-{0000}</displayFormat>
        <label>Apex Job Scheduler Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Job Scheduler Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>