force-app/main/default/objects/Apex_Job_Scheduler_Setting__c/fields/Context_User_Password__c.field-meta.xml
<CustomField>
    <fullName>Context_User_Password__c</fullName>
    <label>Context User Password</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>