force-app/main/default/objects/Apex_Job_Scheduler_Setting__c/fields/Context_Username__c.field-meta.xml
<CustomField>
    <fullName>Context_Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Context Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>