force-app/main/default/objects/Apex_Job_Scheduler_Setting__c/fields/Schedulable_Classes_with_ID__c.field-meta.xml
<CustomField>
    <fullName>Schedulable_Classes_with_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedulable Classes with ID</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>