force-app/main/default/objects/Apex_Job_Scheduler_Setting__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>