force-app/main/default/objects/Apex_Job_Scheduler_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Running_User_Profile_Name__c</columns>
    <columns>Context_Username__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Schedulable_Classes__c</columns>
    <columns>Schedulable_Classes_with_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>